# DictBot

./: .env.example  database.db  pyproject.toml  pytest.ini  test_database.db
src/: main.py
src/api/: iam_token.py  translate.py
src/core/: config.py
src/database/: db.py
src/extraction/: reader.py
src/handlers/: handlers.py  keyboards.py
src/handlers/base/: start.py
src/handlers/logic/: memorization.py  sorting.py
src/keyboards/reply_keyboards/: base_kb.py  learn_word_kb.py  memorization_words_kb.py  sort_words_kb.py
src/migrations/: env.py
src/migrations/versions/: 110b32a715ec_initial_migration.py  2680ec9556cb_base.py  2f3f27151a03_delete_unique_contraint_for_tg_id_in_.py  5cd55acb56da_added_many_to_many_beetwen_users_and_.py  6f35ad681d00_add_is_skipped_column_and_unique_.py  73cd9c8701ba_user_model.py  9a218234a75a_removed_primary_key_tg_id1.py  dfd18b9aa6bc_updated_schema.py  f7a6a626e859_init.py
src/models/: base.py  user.py  user_words_mnm.py  word.py
src/repositories/: sql_repo.py  user_repo.py  word_repo.py
src/tests/: conftest.py  test_sql_repo.py  test_user_repo.py  test_word_repo.py
src/text/: text.py
src/text_messages/: text.py
