[project]
name = "dictbot"
version = "0.1.0"
description = ""
authors = [
    {name = "maniakalochka"}
]
readme = "README.md"
requires-python = "3.12"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "pytest-asyncio (>=0.25.1,<0.26.0)",
    "pydantic (>=2.10.4,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
